--- a/style.css
+++ b/style.css
@@ -42,17 +42,17 @@ body {
     border-top: 1px dashed #000000;
   }
   
-  .past {
+  .past .description {
     background-color: #d3d3d3;
     color: white;
   }
   
-  .present {
+  .present .description {
     background-color: #ff6961;
     color: white;
   }
   
-  .future {
+  .future .description{
     background-color: #77dd77;
     color: white;
   }
