--- a/style.css
+++ b/style.css
@@ -40,19 +40,20 @@ body {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    padding: 20px;
   }
   
-  .past .description {
+  .past  {
     background-color: #d3d3d3;
     color: white;
   }
   
-  .present .description {
+  .present  {
     background-color: #ff6961;
     color: white;
   }
   
-  .future .description{
+  .future {
     background-color: #77dd77;
     color: white;
   }
